--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </nav>
-    
+    <h1>Hello JetPlanner</h1>
     <script>
         let sideNav = document.querySelector(".nav-items")
     let openBtn = document.querySelector(".fa-bars")
