--- a/home.html
+++ b/home.html
@@ -30,8 +30,8 @@
                     <i class="fa-solid fa-xmark"></i>
                 </div>
                 <a href="#home">Home</a>
-                <a href="#aboutus">Dubai Visa</a>
-                <a href="#makeclaim">About Us</a>
+                <a href="#dubaivisa">Dubai Visa</a>
+                <a href="#aboutus">About Us</a>
                 <a href="#contactus">Contact Us</a>
             </div>
             <div class="open-btn">
