added navbar in dubaivisa page also css

--- a/home.html
+++ b/home.html
@@ -29,8 +29,8 @@
                 <div class="close-btn">
                     <i class="fa-solid fa-xmark"></i>
                 </div>
-                <a href="#home">Home</a>
-                <a href="#dubaivisa">Dubai Visa</a>
+                <a href="home.html">Home</a>
+                <a href="dubaivisa.html">Dubai Visa</a>
                 <a href="#aboutus">About Us</a>
                 <a href="#contactus">Contact Us</a>
             </div>
