created contact us html and css and removed unnesasary code in script

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                 <a href="home.html">Home</a>
                 <a href="dubaivisa.html">Dubai Visa</a>
                 <a href="#aboutus">About Us</a>
-                <a href="#contactus">Contact Us</a>
+                <a href="contactus.html">Contact Us</a>
             </div>
             <div class="open-btn">
                 <i class="fa-solid fa-bars"></i>
@@ -52,15 +52,6 @@
         sideNav.classList.remove("out-nav")
         document.body.style.backgroundColor = "white";
     })
-    var a = 0
-    function func(){
-        var a = 2;
-        a = 6        
-        function func2(){
-            var b = 9
-        }
-        return console.log(a)
-    }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
